--- a/src/components/wallets/index.scss
+++ b/src/components/wallets/index.scss
@@ -122,8 +122,8 @@
 .wallets {
     border-radius: 12px;
     border: 1px solid rgba(136, 150, 151, 0.20);
-    background: rgba(5, 6, 6, 0.95);
-    backdrop-filter: blur(75px);
+    background: rgba(136, 150, 151, 0.05);
+    backdrop-filter: blur(30px);
     padding: 12px;
     display: flex;
     flex-direction: column;
